build: 将平台目标设置为x64并更新项目配置
- 在Directory.Build.props中添加PlatformTarget为x64
- 更新解决方案和项目文件以支持x64平台
- 添加构建后复制原生库的任务
- 启用文档生成并调整dll文件的复制设置

--- a/CavalierContoursSharpTests/CavalierContoursSharpTests.csproj
+++ b/CavalierContoursSharpTests/CavalierContoursSharpTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,7 @@
 		<LangVersion>latest</LangVersion>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -23,5 +24,12 @@
 	<ItemGroup>
 		<Using Include="Xunit" />
 	</ItemGroup>
+
+	<Target Name="CopyNativeLibraries" AfterTargets="Build">
+		<Copy SourceFiles="$(MSBuildProjectDirectory)\..\CavalierContoursSharp\runtimes\win-x64\native\cavalier_contours_ffi.dll" 
+			  DestinationFolder="$(OutputPath)" 
+			  SkipUnchangedFiles="true" 
+			  Condition="Exists('$(MSBuildProjectDirectory)\..\CavalierContoursSharp\runtimes\win-x64\native\cavalier_contours_ffi.dll')" />
+	</Target>
 
 </Project>
