--- a/CavalierContoursSharp/CavalierContoursSharp.csproj
+++ b/CavalierContoursSharp/CavalierContoursSharp.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -15,15 +16,14 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/weianweigan/cavalier_contours_sharp</RepositoryUrl>
 		<PackageTags>Polyline;Shape;Clipper;Arc</PackageTags>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Update="runtimes\win-x64\native\cavalier_contours_ffi.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 		<Content Include="runtimes/win-x64/native/cavalier_contours_ffi.dll">
 			<PackagePath>runtimes/win-x64/native</PackagePath>
 			<Pack>true</Pack>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 		<Content Include="build\net40\CavalierContoursSharp.targets">
 			<PackagePath>build/net40/CavalierContoursSharp.targets</PackagePath>
@@ -32,14 +32,20 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Include="..\README.md">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="System.Numerics.Vectors" Version="4.6.1" />
+		<PackageReference Include="System.Numerics.Vectors" Version="4.6.1" />
 	</ItemGroup>
+
+	<Target Name="CopyNativeLibraries" AfterTargets="Build">
+		<Copy SourceFiles="runtimes/win-x64/native/cavalier_contours_ffi.dll"
+			  DestinationFolder="$(OutputPath)"
+			  SkipUnchangedFiles="true" />
+	</Target>
 
 </Project>
