--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
-  <PropertyGroup>
-    <Version>1.0.0</Version>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Version>1.0.0</Version>
+		<PlatformTarget>x64</PlatformTarget>
+	</PropertyGroup>
 </Project>
